Added reviews to places

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -24,7 +24,15 @@
 
   <div class="col-md-9">
     <h3>Reviews by People</h3>
+    <h5>New Review</h5>
+    <% if current_user %>
+      <%= render 'reviews/form' %>
+      <h5>All Reviews</h5>
+      <%= render @reviews %>
+    <% end %>
+
   </div>
+  
 </div>
 
 <script type="text/javascript">
