Added scores to reviews using raty

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing places</h1>
+<h1>Listing Teams</h1>
 
 <br>
 
@@ -27,5 +27,5 @@
 <br>
 
 <% if current_user %>
-  <%= link_to 'New Place', new_place_path %>
+  <%= link_to 'New Team', new_place_path %>
 <% end %>
