--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -10,6 +10,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, "Create Team" %>
   </div>
 <% end %>
