--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -22,15 +22,19 @@
 
   </div>
 
-  <div class="col-md-9">
+  <div class="col-md-6">
     <h3>Reviews by People</h3>
     <h5>New Review</h5>
     <% if current_user %>
       <%= render 'reviews/form' %>
       <h5>All Reviews</h5>
+      <br>
       <%= render @reviews %>
     <% end %>
+  </div>
 
+  <div class="col-md-3">
+    
   </div>
   
 </div>
@@ -50,4 +54,15 @@
     });
   }
   google.maps.event.addDomListener(window, 'load', initialize);
+
+  <% @reviews.each do |review| %>
+    $(".score_<%= review.id %>").raty({
+    starOn: "<%= image_path('star-on.png') %>",
+    starOff: "<%= image_path('star-off.png') %>",
+    score: <%= review.score %>,
+    readOnly: true
+  });
+  <% end %>
 </script>
+
+
