--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
-	<h1>Pages#home</h1>
-	<p>Find me in app/views/pages/home.html.erb</p>
+<div class="text-center landing_title">
+	<%= link_to "Find The Ideal Team for YOU!", places_path, class: "btn btn-default btn-lg btn-landing" %>
 </div>
