--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,12 +17,16 @@
         <li class="active"></li>
         <li><%= link_to "Teams", places_path %></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+
+      <%= form_tag places_path, method: "get", class: "navbar-form navbar-left" do %>
+      
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Team Name" %>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+        <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+
+      <% end %>
+
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
           <li><%= link_to "Dashboard", dashboard_path %></li>
