--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -20,7 +20,7 @@
 			<tbody>
 				<% @places.each do |place| %>
 					<tr>
-						<td><%= place.name %></td>
+						<td><%= link_to place.name, place_path(place) %></td>
 						<td><%= time_ago_in_words(place.created_at) %> ago</td>
 						<td><%= link_to "Edit", edit_place_path(place) %> | <%= link_to "Destroy", place_path(place), method: :delete %></td>
 
@@ -29,7 +29,7 @@
 			</tbody>
 		</table>
 
-		<%= link_to "New Team", new_place_path %>
+		<%= link_to "New Team", new_place_path, class: "btn btn-primary" %>
 
 	</div>
 
@@ -49,7 +49,7 @@
 			<tbody>
 				<% @reviews.each do |review| %>
 					<tr>
-						<td><%= review.place.name %></td>
+						<td><%= link_to review.place.name, place_path(review.place) %></td>
 						<td><%= time_ago_in_words(review.created_at) %></td>
 						<td><div class="score_<%= review.id %>"></div></td>
 						<td><%= link_to "Edit", edit_review_path(review) %> | <%= link_to "Delete", review_path(review), method: :delete %></td>
