--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', places_path %>
+<br>
+
+<%= link_to 'Back', places_path, class: "btn btn-default btn-sm" %>
